fix: add visual feedback delay on toggle to prevent accidental double-taps on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ button {
 
 body {
   font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
-  line-height: 1.4em;
+  /*line-height: 1.4em;*/
   background: #f5f5f5;
   color: #111111;
   min-width: 230px;
@@ -67,12 +67,11 @@ body {
 }
 
 .todoapp h1 {
-  position: absolute;
   top: -110px;
   width: 100%;
   font-family: "Arial";
   /* font-size: 55px; */
-  font-size: 3vw;
+  font-size: 1.7vw;
   font-weight: 200;
   text-align: center;
   color: #3fb89c;
